--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,4 +7,6 @@
       <li><a href="http://www.railstutorial.org/">Rails Tutorial</a></li>
     </ul>
   </nav>
+  <%=CodeRay.scan("puts 'hello world !'.swapcase",:ruby).div(:line_numbers => :table)%>
+  
 </footer>
