User signup complete

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,9 @@
       <li><a href="http://news.railstutorial.org/">News</a></li>
       <li><a href="http://www.railstutorial.org/">Rails Tutorial</a></li>
     </ul>
+    <%=  #CodeRay.scan("puts 'hello world !'.swapcase",:ruby).div(:line_numbers => :table).html_safe 
+    %>
   </nav>
-  <%=CodeRay.scan("puts 'hello world !'.swapcase",:ruby).div(:line_numbers => :table)%>
+  
   
 </footer>
