--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -116,6 +116,7 @@ td.sidebar {
 }
 /*User signup page*/
 div.field, div.actions {
+	width: 212px;
 	margin-bottom: 10px;
 }
 
@@ -123,7 +124,7 @@ div.field, div.actions {
 	margin-top: 10px;
 	padding: 2px;
 	background-color:#990000;
-	display: : table;
+	display: table;
 }
 .field_with_errors label {
 	color: #fff;
